# AIwork4translator

./: .gitignore  AI翻译工具.desktop  BUILD_README.md  README.md  README_en.md  app.py  baseline.py  build.bat  build.sh  build_spec.spec  comparison_results.csv  counting_table.csv  current_env.txt  devdiary.md  evaluate.py  example.md  launcher.py  main.py  ner_list_check.py  pyproject.toml  requirements.txt  test_main_prefs_integration.py  test_webui_app.py  try.py  专有名词识别结果.csv  启动-AI翻译工具.bat  启动-AI翻译工具.command  启动-AI翻译工具.sh
.trae/documents/: 合并模块并移除 src 与 webui_project 的重构计划.md
.trae/rules/: project_rules.md
data/: .env  .env.example
modules/: api_tool.py  config.py  count_tool.py  csv_process_tool.py  markitdown_tool.py  ner_list_tool.py  read_tool.py  terminology_tool.py  translation_core.py  write_out_tool.py
program_translator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
reviews/: program-review-2025-11-26.md  program-review-2025-12-01.md  program-review-2025-12-08T220000.md  program-review-2025-12-24.md
scripts/: install_dependencies.ps1  install_dependencies.py
services/: diagnostics.py
src/: main.py
src/modules/: api_tool.py  config.py  csv_process_tool.py  ner_list_tool.py  read_tool.py  write_out_tool.py
static/: editor.js  script.js  style.css
templates/: editor.html  index.html
test_prompts/: README.md  simulator.py  test_samples.md  test_terms.csv
test_prompts/simulation_results/: simulation_kimi_20251203_213025.json  simulation_kimi_20251203_213025.txt
tests/: test_api_direct.py  test_api_parser.py  test_api_providers.py  test_concurrency_flow.py  test_dashboard_columns.py  test_get_valid_path.py  test_join_and_write.py  test_main_prefs_integration.py  test_markitdown_tool_title.py  test_matching_terms.py  test_matching_terms_aho.py  test_ordered_writing.py  test_plural_article_normalization.py  test_read_count.py  test_read_tool_merge_logic.py  test_repair_json.py  test_save_glossary_df.py  test_save_terms_result.py  test_terminology_tool.py  test_translation_core.py  test_translation_core_fallback.py  test_untranslated_rest.py  test_validate_csv_file.py  test_write_out_tool.py  test_xlsx_conversion.py
webui_project/: app.py
webui_project/modules/: api_tool.py  count_tool.py  markitdown_tool.py  write_out_tool.py
webui_project/static/: script.js  style.css
webui_project/templates/: index.html
webui_project/uploads/: RTG-CPR-DLC-YourNewBestFriend_md_form_for_input.md  RTG-CPR-DLC-YourNewBestFriend_md_form_for_input_output.md  (+2 more)
